배포용 설정 추가